--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,14 @@ h2 {
   font-weight: 800;
   text-align: center;
 }
+#linkedin {
+  max-width: 10%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
 /* welcome styling */
 .welcome h1 {
   font-family: 'Permanent Marker', cursive;
